--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ yarn-debug.log*
 /config/credentials/development.key
 
 /config/credentials/production.key
+/config/credentials/staging.key
 
 # Ignore the db setup script for dev environments.
 /db/setup_dev.sql
