--- a/config/database.yml
+++ b/config/database.yml
@@ -53,3 +53,9 @@ production:
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= Rails.application.credentials.dig(:production_db_url) %>
+
+staging:
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  url: <%= Rails.application.credentials.dig(:staging_db_url) %>
