--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "whats-happenin",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@popperjs/core": "2.9.3",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "bootstrap": "^5.1.0",
+    "channels": "^0.0.4",
+    "expose-loader": "^3.0.0",
+    "jquery": "^3.6.0",
+    "node-sass-glob-importer": "^5.3.2",
+    "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
